# cityseer-examples

./: .gitignore  .nojekyll  404.html  README.md  _deprecated_index.qmd  _quarto.yml  cookbook.qmd  custom-style.css  glossary.html  glossary.qmd  guide.html  guide.qmd  index.html  index.qmd  pyproject.toml  robots.txt  run_notebooks.py  search.json  sitemap.xml
.github/workflows/: quarto-publish.yml
cases/: localised_analysis.py  temp.py
class/: 1_notebooks.html  1_notebooks.ipynb  1_notebooks.qmd  2_basics.html  2_basics.ipynb  2_basics.qmd  3_spatial.html  3_spatial.ipynb  3_spatial.qmd  4_geopandas.html  4_geopandas.ipynb  4_geopandas.qmd  4_pandas.qmd  5_ecosystem.html  5_ecosystem.qmd  5_urban.html  5_urban.ipynb  5_urban.qmd  6_cityseer.html  6_data_science.html  6_data_science.ipynb  6_data_science.qmd  7_data_science.html  8_models.html  index.html  index.qmd
data/: datasets.html  datasets.qmd
data/madrid_bounds/: madrid_bounds.gpkg
data/madrid_census/: eu_stat_clipped.gpkg
data/madrid_nbhds/: madrid_nbhds.gpkg
data/madrid_streets/: street_network_3d.gpkg
examples/: getting_started.html  graph-cleaning.html  graph_cleaning.html  graph_cleaning.ipynb  graph_corrections.html  london_amenities.html  london_centralities.html  momepy_to_cityseer.html  momepy_to_cityseer.ipynb  osm_boundaries.html  osm_boundaries.qmd  osm_to_cityseer.html  osm_to_cityseer.ipynb  save_to_geopandas.html  save_to_geopandas.qmd
examples/continuity/: continuity_os_open.html  continuity_osm.html
notebooks/: getting_started.ipynb  momepy_to_cityseer.ipynb  osm_to_cityseer.ipynb
recipes/: cookbook.qmd  graph_cleaning.ipynb  index.html  index.qmd  live_nodes.html  live_nodes.ipynb  momepy_to_cityseer.ipynb  osm_boundaries.qmd  quickstart.html  quickstart.qmd  save_to_geopandas.qmd
recipes/accessibility/: accessibility_metro.html  (+11 more)
(+106 files in other folders)
