[project]
name = "cityseer-examples"
version = "0.0.1"
description = ""
authors = [{ name = "Gareth Simons", email = "info@benchmarkurbanism.com" }]
dependencies = [
    "cityseer>=4.16.5",
    "pyproj>=3.6.1",
    "shapely>=2.0.3",
    "geopandas>=0.14.3",
    "matplotlib>=3.8.3",
    "networkx>=3.2.1",
    "utm>=0.7.0",
    "osmnx>=1.7.1",
    "momepy>=0.6.0",
    "ipykernel>=6.26.0",
    "numpy>=1.26.4",
    "quarto>=0.1.0",
]
requires-python = ">=3.10, <3.14"
readme = "README.md"
license = { text = "AGPL-3.0" }
