[project]
name = "cityseer-examples"
version = "0.0.1"
description = ""
authors = [{ name = "Gareth Simons", email = "info@benchmarkurbanism.com" }]
dependencies = [
    "cityseer>=4.21.0b44",
    "pyproj>=3.6.1",
    "shapely>=2.0.3",
    "geopandas>=0.14.3",
    "networkx>=3.2.1",
    "utm>=0.7.0",
    "osmnx>=1.7.1",
    "momepy>=0.6.0",
    "ipykernel>=6.26.0",
    "numpy>=1.26.4",
    "quarto>=0.1.0",
    "jupyter-cache>=1.0.1",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.9.3",
    "seaborn>=0.13.2",
]
requires-python = ">=3.11, <3.14"
readme = "README.md"
license = { text = "AGPL-3.0" }
